--- a/client/src/send/index.html
+++ b/client/src/send/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <input type="file" id="fileInput" />
-    <p id="roomID"></p>
+    <p id="roomID">RoomID</p>
+    <h1 id="receivers">Receivers</h1>
   </body>
 </html>
