--- a/client/src/receive/index.html
+++ b/client/src/receive/index.html
@@ -7,6 +7,6 @@
     <title>Download</title>
   </head>
   <body>
-    <h1>This is the download page.</h1>
+    <h1 id="title">This is the download page.</h1>
   </body>
 </html>
