refactor(client): :art: create UI class
Created a UI class to abstract DOM manipulation.

--- a/client/src/send/index.html
+++ b/client/src/send/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <input type="file" id="fileInput" />
-    <p id="roomID">RoomID</p>
-    <h1 id="receivers">Receivers</h1>
+    <p id="roomID"></p>
+    <p id="receivers"></h1>
   </body>
 </html>
