feat(client): :sparkles: add styles to send page

--- a/client/src/send/index.html
+++ b/client/src/send/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Upload</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Mulish:wght@600&family=Source+Serif+Pro:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>File Pie</title>
   </head>
   <body>
+    <h1 id="title">File Pie</h1>
+    <img id="logo" src="<%= require('../shared/logo.svg') %>" height="250" />
+    <p id="caption" class="subtitle">
+      Send files directly to recipients,<br />without your data being stored.
+    </p>
+    <button>Upload</button>
     <input type="file" id="fileInput" />
     <p id="roomID"></p>
-    <p id="receivers"></h1>
+    <p id="receivers"></p>
   </body>
 </html>
