feat(client): :sparkles: implement link and connections on send screen

--- a/client/src/send/index.html
+++ b/client/src/send/index.html
@@ -28,23 +28,19 @@
           <p>Connections</p>
           <p id="connections">0</p>
         </div>
-        <div class="statistic">
+        <!-- <div class="statistic">
           <p>Downloads</p>
           <p id="downloads">0</p>
         </div>
         <div class="statistic">
           <p>Transferred</p>
           <p id="Transferred">0</p>
-        </div>
+        </div> -->
       </div>
       <div id="share" class="flex-col">
-        <p>Share the link to send <span id="file-name"></span>.</p>
-        <a href="/" id="link"
-          >filepie.app/37887c89-7198-4cf5-a8ea-843a4bf0f717</a
-        >
+        <p>Share the link to send <span id="file-name">file</span>.</p>
+        <a id="link"></a>
       </div>
     </div>
-    <p id="roomID"></p>
-    <p id="receivers"></p>
   </body>
 </html>
