feat(client): :sparkles: add footer

--- a/client/src/send/index.html
+++ b/client/src/send/index.html
@@ -42,5 +42,13 @@
         <a id="link"></a>
       </div>
     </div>
+    <!-- TODO: implement about page -->
+    <footer id="footer">
+      <a href="/about">About</a> ·
+      <a
+        href="https://github.com/EmmadUsmani/webrtc-file-transfer#webrtc-file-transfer"
+        >GitHub</a
+      >
+    </footer>
   </body>
 </html>
