feat(client): :sparkles: implement loading and finished states for receiver

--- a/client/src/receive/index.html
+++ b/client/src/receive/index.html
@@ -16,10 +16,10 @@
     <h1 id="title">File Pie</h1>
     <img id="logo" src="<%= require('../shared/logo.svg') %>" height="250" />
     <div id="metadata" class="flex-col">
-      <p id="file-name" class="subtitle"></p>
-      <p id="file-size"></p>
+      <p id="file-name" class="subtitle">&nbsp</p>
+      <p id="file-size">&nbsp</p>
     </div>
-    <button>Download</button>
+    <button id="download">Download</button>
     <footer id="footer">
       <a href="/about">About</a> ·
       <a
