--- a/client/src/send/index.html
+++ b/client/src/send/index.html
@@ -34,10 +34,10 @@
           <p>Downloads</p>
           <p id="downloads">0</p>
         </div>
-        <!-- <div class="statistic">
+        <div class="statistic">
           <p>Transferred</p>
-          <p id="Transferred">0</p>
-        </div> -->
+          <p id="transferred">0</p>
+        </div>
       </div>
       <div id="share" class="flex-col">
         <p>Share the link to send <span id="file-name">file</span>.</p>
