feat(client): :sparkles: add file name to share box

--- a/client/src/send/index.html
+++ b/client/src/send/index.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div id="share" class="flex-col">
-        <p>Share the link to send <span id="file-name">file</span>.</p>
+        <p>Share the link to send <b id="file-name"></b>.</p>
         <a class="link" id="link"></a>
       </div>
     </div>
