feat(client): :sparkles: handle errors specific to receiver

--- a/client/src/receive/index.html
+++ b/client/src/receive/index.html
@@ -25,8 +25,8 @@
       <button id="download">Download</button>
     </div>
     <div id="error" class="flex-col">
-      <p class="subtitle">Oops! Something went wrong.</p>
-      <p>
+      <p id="error-subtitle" class="subtitle">Oops! Something went wrong.</p>
+      <p id="error-subtitle-2" class="subtitle-2">
         Submit an
         <a
           class="link"
