--- a/client/src/send/index.html
+++ b/client/src/send/index.html
@@ -48,8 +48,8 @@
       </div>
     </div>
     <div id="error" class="flex-col">
-      <p class="subtitle">Oops! Something went wrong.</p>
-      <p class="subtitle-2">
+      <p id="error-subtitle" class="subtitle">Oops! Something went wrong.</p>
+      <p id="error-subtitle-2" class="subtitle-2">
         Submit an
         <a
           class="link"
