--- a/client/src/send/index.html
+++ b/client/src/send/index.html
@@ -43,7 +43,7 @@
         </div>
         <div id="share" class="flex-col">
           <p>Share the link to send <b id="file-name"></b>.</p>
-          <a class="link" id="link"></a>
+          <a class="link" id="link" target="_blank"></a>
         </div>
       </div>
     </div>
