feat(client): :sparkles: add loading state

--- a/client/src/send/index.html
+++ b/client/src/send/index.html
@@ -59,6 +59,12 @@
         on GitHub to report a bug.
       </p>
     </div>
+    <div id="loading" class="lds-ellipsis">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
     <footer id="footer">
       <a class="link" href="/about.html">About</a> ·
       <a
