--- a/client/src/receive/index.html
+++ b/client/src/receive/index.html
@@ -36,6 +36,12 @@
         on GitHub to report a bug.
       </p>
     </div>
+    <div id="loading" class="lds-ellipsis">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
     <footer id="footer">
       <a class="link" href="/about.html">About</a> ·
       <a
