feat(client): :lipstick: add 'created by Emmad' to footer

--- a/client/src/send/index.html
+++ b/client/src/send/index.html
@@ -65,13 +65,21 @@
       <div></div>
       <div></div>
     </div>
-    <footer id="footer">
-      <a class="link" href="/about.html">About</a> ·
-      <a
-        class="link"
-        href="https://github.com/EmmadUsmani/webrtc-file-transfer#webrtc-file-transfer"
-        >GitHub</a
-      >
+    <footer id="footer" class="flex-col">
+      <p>
+        <a class="link" href="/about.html">About</a> ·
+        <a
+          class="link"
+          href="https://github.com/EmmadUsmani/webrtc-file-transfer#webrtc-file-transfer"
+          >GitHub</a
+        >
+      </p>
+      <p>
+        created by
+        <a href="https://www.linkedin.com/in/emmadusmani/" class="link"
+          >Emmad</a
+        >
+      </p>
     </footer>
   </body>
 </html>
