style(monorepo): rename project to file-pie

--- a/client/src/about/index.html
+++ b/client/src/about/index.html
@@ -43,9 +43,7 @@
         A signaling server is used to establish a connection between browsers,
         but during this process no information about the file is sent to the
         server. The app is completely
-        <a
-          class="link"
-          href="https://github.com/EmmadUsmani/webrtc-file-transfer#webrtc-file-transfer"
+        <a class="link" href="https://github.com/EmmadUsmani/file-pie"
           >open source</a
         >.
       </p>
@@ -66,9 +64,7 @@
       <p>
         If you would like to report a bug or provide other feedback, please
         submit an issue on
-        <a
-          class="link"
-          href="https://github.com/EmmadUsmani/webrtc-file-transfer/issues"
+        <a class="link" href="https://github.com/EmmadUsmani/file-pie/issues"
           >GitHub</a
         >.
       </p>
@@ -76,9 +72,7 @@
     <footer id="footer" class="flex-col">
       <p>
         <a class="link" href="/about.html">About</a> ·
-        <a
-          class="link"
-          href="https://github.com/EmmadUsmani/webrtc-file-transfer#webrtc-file-transfer"
+        <a class="link" href="https://github.com/EmmadUsmani/file-pie"
           >GitHub</a
         >
       </p>
