--- a/client/src/send/index.html
+++ b/client/src/send/index.html
@@ -51,9 +51,7 @@
       <p id="error-subtitle" class="subtitle">Oops! Something went wrong.</p>
       <p id="error-subtitle-2" class="subtitle-2">
         Submit an
-        <a
-          class="link"
-          href="https://github.com/EmmadUsmani/webrtc-file-transfer/issues"
+        <a class="link" href="https://github.com/EmmadUsmani/file-pie/issues"
           >issue</a
         >
         on GitHub to report a bug.
@@ -68,9 +66,7 @@
     <footer id="footer" class="flex-col">
       <p>
         <a class="link" href="/about.html">About</a> ·
-        <a
-          class="link"
-          href="https://github.com/EmmadUsmani/webrtc-file-transfer#webrtc-file-transfer"
+        <a class="link" href="https://github.com/EmmadUsmani/file-pie"
           >GitHub</a
         >
       </p>
